--- a/Apartment Project/src/AnonmyousHome.html
+++ b/Apartment Project/src/AnonmyousHome.html
@@ -167,7 +167,7 @@ nav {
   gap: 1rem;
   padding: 3rem 2rem;
   border-radius: 2rem;
-  background-color: rgba(185, 27, 27, 0.7);
+  background-color: white;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
