--- a/Apartment Project/src/AnonmyousHome.html
+++ b/Apartment Project/src/AnonmyousHome.html
@@ -58,14 +58,14 @@ body {
 nav {
   max-width: var(--max-width);
   margin: auto;
-  padding: 2rem 1rem;
+  padding: 1rem 1rem;
   display: flex;
-  align-items: center;
+  
   justify-content: space-between;
 }
 
 .nav__logo img {
-  height: 80px;
+  height: 150px;
   border-radius: 100%;
 }
 
@@ -312,7 +312,7 @@ nav {
   
   border-radius: 2rem;
   box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
-  background-image: url(image/11.jpg);
+  background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20210214/pngtree-modern-small-apartment-nordic-style-living-room-sofa-image_562360.jpg);
   background-position: center;
   background-size: cover;
 }
@@ -330,7 +330,7 @@ nav {
   margin: auto;
   margin-bottom: 1rem;
   font-size: 1.5rem;
-  font-weight: 100;
+  font-weight: 200;
   color: var(--text-dark);
   color: #040404;
   background-color: white;
@@ -475,11 +475,9 @@ nav {
   
     <nav>
       <div class="nav__logo"><img src="image/logo.jpg"></div>
+      
       <ul class="nav__links">
         <li class="link"><a href="#home">Home</a></li>
-        
-      </ul>
-      <ul class="nav__links">
         <li class="link"><a href="admin.html">Admin</a></li>
         <li class="link"><a href="Login.html">Log In</a></li>
         <li class="link"><a href="Registration.html">Sign Up</a></li>
@@ -591,7 +589,7 @@ nav {
 
     <section id="client" class="client">
       <div class="section__container client__container">
-        <h2 class="section__header">What our client say</h2>
+        <h2 class="section__header">What our client says !!</h2>
         <div class="client__grid">
           <div class="client__card">
             <img src="image/client1.jpeg" alt="client" />
@@ -617,7 +615,7 @@ nav {
 
     <section id="moto" class="section__container">
       <div class="reward__container">
-        <p>Welcome Home !</p>
+        <h1>Welcome Home !</h1>
         <h4>We're thrilled you've landed on our platform, your gateway to finding your perfect apartment. We understand the search can be daunting, so we've made it simple and stress-free. Browse beautiful rentals, explore vibrant neighborhoods, and discover your dream home – all in one place.</h4>
         <button class="reward__btn">Resgister now</button>
       </div>
@@ -628,7 +626,7 @@ nav {
         <div class="footer__col">
           <h3><img style="height: 120px; width: 120px; border-radius: 150%;"src="image/logo.jpg"></h3>
           <p>
-            With three skilled developers and two testers, our team employs full-stack Java to craft a cutting-edge online rental system. We're committed to delivering a seamless experience, ensuring satisfaction for users and landlords alike.
+            With three skilled developers and two testers,our team employs full-stack Java to craft a cutting-edge online rental system.
           </p>
         </div>
         <div class="footer__col">
