--- a/Apartment Project/src/Login.html
+++ b/Apartment Project/src/Login.html
@@ -113,7 +113,7 @@
     <form id="loginForm" onsubmit="return validateForm()">
         <h3>User Login</h3>
         <label for="username">Username</label>
-        <input type="text" placeholder="Username" id="username" name="username">
+        <input type="text" placeholder="First name" id="username" name="username">
         <label for="password">Password</label>
         <input type="password" placeholder="Password" id="password" name="password">
         <div id="error-message" class="error-message"></div>
